adjustments for branch-2